syntax = "proto3";

// Brought in from scalapb-runtime
import "scalapb/scalapb.proto";
import "messages.proto";

option (scalapb.options) = {
  package_name: "protobuf.messages"
  single_file: true
  flat_package: true
  preamble: "sealed trait ArcAppMetricResponse"
};


message Cpu {
    // int64 -> Long
    int64 system = 1;
    int64 user = 2;
    int64 total = 3;
    int64 start = 4;
    int64 last = 5;
    double percent = 6;
}

message Mem {
    // int64 -> Long
    int64 size = 1;
    int64 pageFaults = 2;
    int64 share = 3;
    int64 minorFaults = 4;
    int64 majorFaults = 5;
}

message IO {
    // int64 -> Long
    int64 bytesRead = 1;
    int64 bytesWritten = 2;
    int64 bytesTotal = 3;
}

message ProcessState {
    // int64 -> Long
    int64 threads = 1;
    int32 priority = 2;
    string state = 3;
}

message Executor {
    // Path to binary
    string bin = 1;
    // Akka Address for the TaskManager
    string addr = 2;
}

message ExecutorMetric {
    int64 timestamp = 1;
    ProcessState state = 2 [(scalapb.field).no_box = true]; // Not Option[]
    Cpu cpu = 3 [(scalapb.field).no_box = true]; // Not Option[]
    Mem mem = 4 [(scalapb.field).no_box = true]; // Not Option[]
    IO io = 5 [(scalapb.field).no_box = true]; // Not Option[]
    Executor executor = 6 [(scalapb.field).no_box = true]; // Not Option[]
}

// ArcTask and its corresponding metric set
message ArcTaskMetric {
    ArcTask task = 1 [(scalapb.field).no_box = true]; // Not Option[]
    ExecutorMetric executorMetric = 2 [(scalapb.field).no_box = true]; // Not Option[]
}

message ArcAppMetricRequest {
    string appId = 1;
}

message ArcAppMetricReport {
    option (scalapb.message).extends = "ArcAppMetricResponse";
    string appId = 1;
    repeated ArcTaskMetric metrics = 2;
}

message ArcAppMetricFailure {
    option (scalapb.message).extends = "ArcAppMetricResponse";
    string reason = 1;
}

